--- a/AreaStudente/Views/Studenti/Immatricolati.cshtml
+++ b/AreaStudente/Views/Studenti/Immatricolati.cshtml
@@ -123,7 +123,7 @@
 						@* <div class="text-center">
 							<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#confermaModal">Procedi</button>
 						</div> *@
-						@if (Model.Matricola.HasValue == false && Model.K_Corso != Guid.Empty && ViewData.ModelState.IsValid)
+						@if (Model.Matricola.HasValue == false && @Model.K_Corso.ToString() != "" && ViewData.ModelState.IsValid)
 						{
 							<div class="text-center">
 								<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#confermaModal">Procedi</button>
@@ -133,21 +133,24 @@
 						{
 							<div class="text-center">
 								<button type="button" class="btn btn-primary" disabled>Procedi</button>
-								<div class="text-danger mt-2">
-									@if (Model.Matricola.HasValue == false)
-									{
-										<span>Lo studente risulta già immatricolato.</span>
-									}
-									else if (Model.K_Corso == Guid.Empty)
-									{
-										<span>Seleziona un corso per procedere.</span>
-									}
-									else if (!ViewData.ModelState.IsValid)
-									{
-										<span>Compila correttamente tutti i campi richiesti.</span>
-									}
+								<div class="text-center">
+									<div class="text-danger mt-2">
+										@if (Model.Matricola.HasValue)
+										{
+											<span>Lo studente risulta già immatricolato.</span>
+										}
+										else if (@Model.K_Corso.ToString() == "")
+										{
+											<span>Seleziona un corso per procedere.</span>
+										}
+										else if (!ViewData.ModelState.IsValid)
+										{
+											<span>Compila correttamente tutti i campi richiesti.</span>
+										}
+									</div>
 								</div>
 							</div>
+
 						}
 					</div>
 				</div>
