--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -12,10 +12,8 @@
 			<table class="table">
 				<thead>
 					<tr>
-						<th>Mittente</th>
-
+						<th>Ruolo Mittente</th>
 						<th>Comunicazione</th>
-
 					</tr>
 				</thead>
 				<tbody>
