--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container pb-3 mt-2">
     <div class="container-fluid my-5">
         <div class="mb-3">
-            <h2 class="text-start">Pannello del docente</h2>
+            <h2 class="text-start">Benvenuto nel pannello docente, </h2>
             <h5></h5>
         </div>
          <hr />
