Overhaul totale del design
Ho fame

--- a/AreaDocente/Views/Appelli/Edit.cshtml
+++ b/AreaDocente/Views/Appelli/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AreaDocente.Models.Entities.MVCAPPELLO
 
-<div class="container my-5">
+<div class="container ">
 
     <h1>Modifica Appello</h1>
 
