--- a/AreaDocente/Views/Appelli/List.cshtml
+++ b/AreaDocente/Views/Appelli/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<AreaDocente.Models.Entities.MVCAPPELLO>
 
-<div class="container my-5">
+<div class="container ">
 	<h1 class="mb-4">Elenco Appelli</h1>
 
 	<table class="table">
