--- a/AreaDocente/Views/Home/FAQ.cshtml
+++ b/AreaDocente/Views/Home/FAQ.cshtml
@@ -5,8 +5,8 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-lg-8">
-            <h1 class="text-center">FAQ Università</h1>
-            <p class="text-center">Domande frequenti per i docenti universitari</p>
+            <h1 class="text-start">FAQ Università</h1>
+            <p class="text-start">Domande frequenti per i docenti universitari</p>
             <div class="accordion" id="faqAccordion">
 
                 <div class="accordion-item">
