--- a/AreaDocente/Views/Lezioni/Edit.cshtml
+++ b/AreaDocente/Views/Lezioni/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AreaDocente.Models.Entities.MVCLezioni
 
-<div class="container my-5">
+<div class="container ">
     <h1>Modifica Lezione</h1>
 
     @if (Model is null)
