--- a/AreaDocente/Views/Lezioni/List.cshtml
+++ b/AreaDocente/Views/Lezioni/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<AreaDocente.Models.Entities.MVCLezioni>
 
-<div class="container my-5">
+<div class="container ">
     <h1>Elenco Lezioni</h1>
 
     <table class="table">
