--- a/AreaDocente/Views/Materiali/Add.cshtml
+++ b/AreaDocente/Views/Materiali/Add.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AreaDocente.Models.AddMaterialiViewModel
 
-<div class="container my-5">
+<div class="container ">
 	<h1 class="mb-4">Inserimento Materiale</h1>
 
 	<div class="card shadow-sm p-4">
