--- a/AreaDocente/Views/Materiali/Edit.cshtml
+++ b/AreaDocente/Views/Materiali/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AreaDocente.Models.EditMaterialiViewModel
 
-<div class="container my-5">
+<div class="container ">
 
     <h1>Modifica Materiali</h1>
 
