--- a/AreaDocente/Views/Appelli/Add.cshtml
+++ b/AreaDocente/Views/Appelli/Add.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AreaDocente.Models.AddAppelliViewModel
 
-<div class="container my-5">
+<div class="container ">
     <h1 class="mb-4">Inserimento Appello</h1>
 
     <div class="card shadow-sm p-4">
