--- a/AreaDocente/Views/Home/ComeFunziona.cshtml
+++ b/AreaDocente/Views/Home/ComeFunziona.cshtml
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-lg-8">
-            <div class="mt-2">
+            <div>
                 <h1 class="text-start">Come funziona il pannello docente?</h1>
                 <ol start="1">
                     <li>
