--- a/AreaDocente/Views/Home/Contatti.cshtml
+++ b/AreaDocente/Views/Home/Contatti.cshtml
@@ -47,14 +47,7 @@
             <div class="d-flex justify-content-end">
                 <div class="border rounded shadow-sm mt-4" style="width: 100%;">
                     <h5 class="text-center g-2">Dove ci troviamo</h5>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12071.048960148692!2d14.243788395393834!3d40.855143607443665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133b08f0393f7605%3A0x405e93e8c920f374!2sVia%20S.%20Gennaro%20Ad%20Antignano%2C%20123%2C%2080129%20Napoli%20NA!5e0!3m2!1sit!2sit!4v1746190462664!5m2!1sit!2sit"
-                            width="100%"
-                            height="450"
-                            style="border:0;"
-                            allowfullscreen=""
-                            loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11185.819500467893!2d9.211718482826837!3d45.50092108719124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c719ac51810b%3A0xbf03100040d10f0d!2s20100%20Milan%2C%20Metropolitan%20City%20of%20Milan!5e0!3m2!1sen!2sit!4v1746616181626!5m2!1sen!2sit" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
