--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 
 @model AreaDocente.Models.ListAndAddViewModel
 
-<div class="container pb-3 mt-2">
-    <div class="container-fluid my-5">
+<div class="container">
+    <div class="container-fluid ">
         <div class="mb-3">
             <h2 class="text-start">Pannello del docente</h2>
             <h5></h5>
