--- a/AreaDocente/Views/Home/Privacy.cshtml
+++ b/AreaDocente/Views/Home/Privacy.cshtml
@@ -5,17 +5,15 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-lg-8">
-            <h1 style="font-size:60px;"> Informativa sulla Privacy</h1>
+            <h1 style="text-start"> Informativa sulla Privacy</h1>
 
-
-
-            <p>Ultimo aggiornamento: 14 Aprile 2025</p>
+            <p>Ultimo aggiornamento: 07 / 05 / 2025</p>
 
             <p>La presente informativa descrive le modalità di gestione del sito web in riferimento al trattamento dei dati personali degli utenti che lo consultano. L’informativa è resa ai sensi del Regolamento (UE) 2016/679 (GDPR).</p>
 
             <p>
                 <strong>1. Titolare del Trattamento</strong><br>
-                Il titolare del trattamento dei dati è [Nome Azienda], con sede legale in [Indirizzo], contattabile all’indirizzo email: [email@email.it].
+                Il titolare del trattamento dei dati è UniGen, con sede legale a Milano, MI 20100, IT, contattabile all’indirizzo email: info@unigen.it.
             </p>
 
             <p>
@@ -24,8 +22,6 @@
             </p>
             <ul>
                 <li>Dati identificativi (nome, email, telefono)</li>
-                <li>Dati tecnici (IP, browser, dispositivo)</li>
-                <li>Dati forniti volontariamente tramite form di contatto o acquisto</li>
             </ul>
 
             <p>
@@ -35,7 +31,6 @@
             <ul>
                 <li>Rispondere a richieste e fornire servizi</li>
                 <li>Adempiere a obblighi legali</li>
-                <li>Finalità di marketing (previo consenso)</li>
             </ul>
 
             <p>
@@ -45,17 +40,8 @@
 
             <p>
                 <strong>5. Diritti dell’Interessato</strong><br>
-                L’utente ha diritto di accedere, rettificare, cancellare, limitare o opporsi al trattamento dei dati, nonché alla portabilità degli stessi.
+                L’utente ha diritto di accedere, rettificare, cancellare, limitare o opporsi al trattamento dei dati, nonché alla portabilità degli stessi contattando l'amministrazione.
             </p>
-
-            <p>
-                <strong>6. Cookie</strong><br>
-                Il sito utilizza cookie tecnici e, previo consenso, di profilazione. Per maggiori informazioni, consulta la [Cookie Policy].
-            </p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
 
         </div>
     </div>
