--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="~/AreaDocente.styles.css" asp-append-version="true" />
 
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        .content-wrapper {
+            flex: 1;
+            padding-top: 24px;
+        }
         .navbar-custom {
             background-color: #12304F;
         }
@@ -22,17 +34,10 @@
         .dropdown-menu > li:hover > .dropdown-submenu {
             display: block;
         }
-
-        .flex-wrapper {
-            display: flex;
-            min-height: 100vh;
-            flex-direction: column;
-            justify-content: space-between;
-        }
     </style>
 
 </head>
-<body class="m-0 flex-wrapper">
+<body class="m-0">
     <header class="mb-5">
         <div class="fixed-top">
             <nav class="navbar navbar-dark navbar-expand-lg navbar-custom">
@@ -83,7 +88,6 @@
                         </ul>
                         <ul class="navbar-nav navbar-right">
                             <li class="nav-item">
-                                @* <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i> @ViewBag.usr </a> *@
                                 <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i> @Context.Session.GetString("usr") </a>
                             </li>
                             <li class="nav-item">
@@ -97,13 +101,13 @@
         </div>
     </header>
 
-    <div @* class="container" *@>
-        <main role="main" @* class="pb-3 mt-2" *@>
+    <div class="content-wrapper">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
-    <footer>
+    <footer class="mt-auto">
         <div class="bg-dark text-white position-sticky">
             <div class="container d-flex justify-content-between align-items-end flex-wrap">
                 <div>
