--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -14,14 +14,18 @@
             height: 100%;
             margin: 0;
         }
+
         body {
             display: flex;
             flex-direction: column;
         }
+
         .content-wrapper {
             flex: 1;
-            padding-top: 24px;
+            padding-top: 18px;
+            padding-bottom: 18px;
         }
+
         .navbar-custom {
             background-color: #12304F;
         }
