--- a/AreaDocente/Views/Home/FAQ.cshtml
+++ b/AreaDocente/Views/Home/FAQ.cshtml
@@ -17,7 +17,9 @@
                     </h2>
                     <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1">
                         <div class="accordion-body">
-                            Il pannello del docente consente di gestire gli appelli, caricare materiali, verbalizzare esami e comunicare con gli studenti.
+                            <p class="fw-bolder">
+                                Il pannello del docente consente di gestire gli appelli, caricare materiali, verbalizzare esami e comunicare con gli studenti.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -30,7 +32,9 @@
                     </h2>
                     <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2">
                         <div class="accordion-body">
-                            È necessario possedere un titolo di Dottorato di Ricerca e aver superato l’Abilitazione Scientifica Nazionale per la fascia corrispondente.
+                            <p class="fw-bolder">
+                                È necessario possedere un titolo di Dottorato di Ricerca e aver superato l’Abilitazione Scientifica Nazionale per la fascia corrispondente.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -43,7 +47,9 @@
                     </h2>
                     <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3">
                         <div class="accordion-body">
-                            La modalità varia per dipartimento, ma in genere si basa su una richiesta dello studente e una valutazione da parte del docente in base agli interessi e al percorso.
+                            <p class="fw-bolder">
+                                La modalità varia per dipartimento, ma in genere si basa su una richiesta dello studente e una valutazione da parte del docente in base agli interessi e al percorso.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -56,7 +62,9 @@
                     </h2>
                     <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4">
                         <div class="accordion-body">
-                            Attraverso il portale docente, nella sezione "valutazioni", è possibile registrare i voti degli appelli e pubblicarli agli studenti.
+                            <p class="fw-bolder">
+                                Attraverso il portale docente, nella sezione "valutazioni", è possibile registrare i voti degli appelli e pubblicarli agli studenti.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -69,7 +77,9 @@
                     </h2>
                     <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5">
                         <div class="accordion-body">
-                            Sì, previa approvazione del Consiglio di Corso di Studio e secondo i criteri dell'offerta formativa dell'ateneo.
+                            <p class="fw-bolder">
+                                Sì, previa approvazione del Consiglio di Corso di Studio e secondo i criteri dell'offerta formativa dell'ateneo.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -82,7 +92,9 @@
                     </h2>
                     <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6">
                         <div class="accordion-body">
-                            Sì, esistono opportunità di insegnamento e ricerca all’estero tramite programmi come Erasmus+ Staff Mobility e bandi internazionali.
+                            <p class="fw-bolder">
+                                Sì, esistono opportunità di insegnamento e ricerca all’estero tramite programmi come Erasmus+ Staff Mobility e bandi internazionali.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -95,7 +107,9 @@
                     </h2>
                     <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7">
                         <div class="accordion-body">
-                            Il calendario è stabilito in coordinamento con il Dipartimento e caricato nel sistema gestionale dell’ateneo.
+                            <p class="fw-bolder">
+                                Il calendario è stabilito in coordinamento con il Dipartimento e caricato nel sistema gestionale dell’ateneo.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +122,9 @@
                     </h2>
                     <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8">
                         <div class="accordion-body">
-                            La maggior parte degli atenei offre piattaforme come Moodle, Teams, Zoom o Google Classroom per supportare la didattica online e ibrida.
+                            <p class="fw-bolder">
+                                La maggior parte degli atenei offre piattaforme come Moodle, Teams, Zoom o Google Classroom per supportare la didattica online e ibrida.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -121,7 +137,9 @@
                     </h2>
                     <div id="collapse9" class="accordion-collapse collapse" aria-labelledby="heading9">
                         <div class="accordion-body">
-                            Sì, la carriera accademica prevede sia l’insegnamento che la produzione scientifica, spesso integrati tra loro.
+                            <p class="fw-bolder">
+                                Sì, la carriera accademica prevede sia l’insegnamento che la produzione scientifica, spesso integrati tra loro.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -134,7 +152,9 @@
                     </h2>
                     <div id="collapse10" class="accordion-collapse collapse" aria-labelledby="heading10">
                         <div class="accordion-body">
-                            Gli uffici didattici di dipartimento o la segreteria del personale docente offrono supporto su orari, pratiche, missioni e rendicontazioni.
+                            <p class="fw-bolder">
+                                Gli uffici didattici di dipartimento o la segreteria del personale docente offrono supporto su orari, pratiche, missioni e rendicontazioni.
+                            </p>
                         </div>
                     </div>
                 </div>
