--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="container-fluid ">
         <div class="mb-3">
-            <h2 class="text-start">Benvenuto nel pannello docente, </h2>
+            <h2 class="text-start">Pannello del docente</h2>
             <h5></h5>
         </div>
          <hr />
@@ -100,7 +100,7 @@
 											<label class="form-label">Testo:</label>
 											<textarea asp-for="AddComunicazione.Testo" class="form-control" rows="6" required></textarea>
 											<span asp-validation-for="AddComunicazione.Testo" class="text-danger"></span>
-											<button type="submit" class="btn btn-primary mt-3">Inserisci Comunicazione</button> 
+											<button type="submit" class="btn btn-primary mt-3">Inserisci Comunicazione</button>
 										</div>
 									</form>
 								</div>
