--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -109,12 +109,12 @@
 												<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 											</div>
 											<div class="modal-body">
-												<form method="post" asp-controller="Comunicazioni" asp-action="Add">
+												<form method="post" asp-controller="Comunicazioni" asp-action="Add" id="form-insert">
 
 													<div class="mt-3">
 														<label class="form-label">Destinatari</label>
 														<select asp-for="NuovaComunicazione.K_Docente" asp-items="@ViewBag.DocentiList" class="form-select" required>
-														@* 	<option selected>-- Seleziona un destinatario --</option> *@
+															@* 	<option selected>-- Seleziona un destinatario --</option> *@
 															<option selected value="Amministrazione">Amministrazione</option>
 														</select>
 														<span asp-validation-for="NuovaComunicazione.K_Docente" class="text-danger"></span>
@@ -122,7 +122,7 @@
 
 													<div class="mt-4">
 														<label class="form-label">Testo:</label>
-														<textarea asp-for="NuovaComunicazione.Testo" class="form-control" rows="6" required></textarea>
+														<textarea asp-for="NuovaComunicazione.Testo" class="form-control" rows="6" required id="testoComunicazioneAdd"></textarea>
 														<span asp-validation-for="NuovaComunicazione.Testo" class="text-danger"></span>
 														<button type="submit" class="btn btn-primary mt-3">Inserisci Comunicazione</button>
 													</div>
@@ -257,3 +257,5 @@
 		}
 	</div>
 </div>
+
+
