--- a/AreaDocente/Views/Prove/Add.cshtml
+++ b/AreaDocente/Views/Prove/Add.cshtml
@@ -3,7 +3,7 @@
 }
 @model AreaDocente.Models.AddProveViewModel
 
-<div class="container my-2">
+<div class="container ">
     <h1 class="mb-4">Aggiunta Prova</h1>
 
     <div class="card shadow-sm p-4">
