--- a/AreaDocente/Views/Prove/Valutazione.cshtml
+++ b/AreaDocente/Views/Prove/Valutazione.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<AreaDocente.Models.Entities.MVCValutazione>
 
-<div class="container my-2">
+<div class="container ">
     <h1 class="mb-4">Valutazione Prove</h1>
 
     @if (TempData["SuccessMessage"] != null)
