--- a/AreaDocente/Views/Prove/List.cshtml
+++ b/AreaDocente/Views/Prove/List.cshtml
@@ -7,7 +7,7 @@
     var proveConDomande = Model.Where(p => p.Tipologia == "Da" || p.Tipologia == "Dc").ToList();
 }
 
-<div class="container my-2">
+<div class="container ">
     <h1>Elenco Prove</h1>
 
     <!-- Select filtro -->
