--- a/AreaPubblica/Views/Privacy/Index.cshtml
+++ b/AreaPubblica/Views/Privacy/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div style="padding-top: 120px;"></div>
 
-<div class="container">
+<div class="container mb-5">
 	<div class="row">
 		<!-- Colonna principale per il contenuto -->
 		<div class="col-md-8">
