--- a/AreaStudente/Views/Studenti/Immatricolati.cshtml
+++ b/AreaStudente/Views/Studenti/Immatricolati.cshtml
@@ -125,7 +125,7 @@
 							</div>
 							<div class="col-12 col-lg-3 mb-2 mb-lg-0">
 								<label class="form-label form-control-label">Provincia</label>
-								<input type="text" asp-for="Provincia" class="form-control text-uppercase form-control-alternative" maxlength="2" required />
+								<input type="text" asp-for="Provincia" class="form-control form-control-alternative" maxlength="2" required />
 								<span asp-validation-for="Provincia" class="text-danger"></span>
 							</div>
 						</div>
